# barebone

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
barebone/: __init__.py  agent.py  client.py  memory.py  oauth.py  providers.py  runtime.py  tools.py  types.py
barebone/agent/: __init__.py  agent.py  core.py  hooks.py  router.py  types.py
barebone/auth/: __init__.py  anthropic.py  base.py  codex.py  dataclasses.py  openrouter.py
barebone/common/: __init__.py  constants.py  dataclasses.py  structured.py
barebone/memory/: __init__.py  base.py  inmemory.py  sqlite.py
barebone/tools/: __init__.py  base.py  builtin.py  code.py  decorator.py  types.py  web.py
examples/: 01_basic.py  02_tools.py  03_streaming.py  04_conversation.py  05_chaining.py  06_routing.py  07_parallel.py  08_reflection.py  09_planning.py  10_orchestrator.py  11_human_in_loop.py  12_vision.py  13_timeout.py  14_pipeline.py  15_parallel.py  16_handoff.py  17_debate.py  18_oauth_login.py  basic.py  long_running_agent.py  resume_agent.py  simple_agent.py  structured_output.py  test_tools.py
examples/advanced/: advanced.py  basic_agent.py  evaluator_optimizer.py  fallback_retry.py  full_features.py  human_in_the_loop.py  memory.py  multi_agent.py  orchestrator_worker.py  parallelization.py  planning.py  prompt_chaining.py  rag.py  reflection.py  routing.py  semantic_memory.py  streaming.py  structured_output.py  tool_loop.py
examples/auth/: codex_oauth_agent.py
tests/: conftest.py  test_agent.py  test_providers.py  test_tools.py  test_types.py
