[project]
name = "barebone"
version = "0.1.4"
description = "Build agents your way using barebone primitives"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "taraqqi" }
]
keywords = ["llm", "ai", "primitives", "claude", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC0415"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
